@@ -1,3 +1,7 @@
+2006-10-31  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDb/_WriteGedcom.py (write_families): Properly write
+	custom attr type.
+
 2006-10-30  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_PersonView.py: prevent updates on person list if not 
 	visible (person-added)
